# bartlebot

./: README.md  bartlebot.yml  pyproject.toml
.github/workflows/: integration-tests.yml  pytest.yml  unit-tests.yml
bartlebot/: production.py
bartlebot/scenes/law_library/: __init__.py  doc_enrichments.py  docs.py  entity_resolvers.py  kg.py  query_handler.py
demo/: cli.py  production.py
demo/typer/: legal.py
integration/: all.sh  legal.sh
notebooks/: LawLibrarian.ipynb  README.md  test.sh
src/bartlebot/: production.py
src/bartlebot/scenes/law_library/: __init__.py  doc_enrichments.py  docs.py  entity_resolvers.py  kg.py  query_handler.py
tests/: test_demo_typer_help.py
website/: index.md
